icell/tests/compile_fail/typeid-tl/distinct_types.stderr
error[E0308]: mismatched types
  --> $DIR/distinct_types.rs:12:14
   |
12 |     bar.read(&value);
   |              ^^^^^^ expected struct `Bar`, found struct `Foo`
   |
   = note: expected reference `&icell::core::ICell<icell::typeid_tl::TypeId<Bar>, _>`
              found reference `&icell::core::ICell<icell::typeid_tl::TypeId<Foo>, {integer}>`
